--- a/HBuilderProjects/js/ex1.html
+++ b/HBuilderProjects/js/ex1.html
@@ -5,7 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>我的第一个 JavaScript</h1>
+		<h1>我的第一个 JavaScript text</h1>
 		<p>
 			JavaScript 能够对事件做出反应，比如对按钮的点击：
 		</p>
